# libchipvpn

./: Makefile.am  client.conf  client.ini  config.h  config.h.in~  config.txt  config2.txt  configure.ac  configure~  hmac.c  libchipvpn.la  libchipvpn.pc  libchipvpn.pc.in  libtool  route.sh  server.conf  server.ini
.libs/: libchipvpn.la  libchipvpn.lai  libchipvpn.so.2.1.1
dist-build/: android-build.sh
libsodium-android-armv8-a+crypto/lib/: libsodium.la
libsodium-android-armv8-a+crypto/lib/pkgconfig/: libsodium.pc
libsodium-android-westmere/lib/: libsodium.la
libsodium-android-westmere/lib/pkgconfig/: libsodium.pc
src/: address.c  address.h  address.lo  auth.c  auth.h  bitmap.c  bitmap.h  chacha20-aarch64-neon.S  chacha20.c  chacha20.h  chacha20poly1305.c  chacha20poly1305.h  chipvpn.c  chipvpn.h  chipvpn.lo  config.c  config.h  control.c  control.h  crc32.c  crc32.h  crypto.c  crypto.h  crypto.lo  curve25519.c  curve25519.h  device.c  device.h  device.lo  ecdh.c  ecdh.h  event.c  event.h  firewall.c  firewall.h  hkdf_sha256.c  hkdf_sha256.h  hmac_sha256.c  hmac_sha256.h  ini.c  (+36 more)
